<resources>

    //Content Authority
    <string name="content_authority">com.yarmatey.messageinabottle.sql.provider</string>

    <string name="app_name">Message In A Bottle</string>
    <string name="create_message">Create A Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">New Message</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_button">Drop Bottle</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDdqcrLOV_2jR5mJKh1Us1iDDDfE-0WRlQ</string>

    <string name="title_activity_inventory">Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_store">UserStoreActivity</string>
    <string name="title_activity_main">main</string>
    <string name="title_activity_welcome">welcomeActivity</string>
    <string name="title_activity_welcome2">welcomeActivity2</string>
    <string name="drifting_title">Here be ye loot</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="static_label">Here be yer pirate map!</string>
    <string name="user_label">Here be what ye sayin\' </string>
    <string name="cast_bottle_title">Cast yer bottle to the sea!</string>
    <string name="warning_no_location">Warning: No Location Detected</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_bottles">Bottle Settings</string>
    <string name="sailor_mouth">Sailor\'s Mouth</string>
    <string name="sailor_mouth_description">Enable adult language</string>

    <string name="discardWarning">Warning on Discard</string>
    <string name="discardWarning_description">Display a pop-up to cancel discarding of bottles</string>


    <string name="pickupFreq">Pickup Frequency</string>
    <string name="pickupFreq_description">How often you check for bottles</string>
    <string-array name="pickupFreq_titles">
        <item>Sleepy Pirate</item>
        <item>Awake Pirate</item>
        <item>Caffeinated Pirate</item>
    </string-array>
    <!-- You'd think this would be an integer array, but that crashed the entire app. Fix appreciated - Brennen-->
    <string-array name="pickupFreq_values">
        <item>600</item>
        <!-- 60 seconds-->
        <item>60</item>
        <!-- 6 seconds-->
        <item>6</item>
        <!-- .6 seconds-->
    </string-array>

    <string name="maps">Enable Maps</string>
    <string name="maps_description">Display a location when creating bottles</string>

    <string name="filters">Create Filter </string>
    <string name="filters_description">Add a filter to your list of view/hide bottles</string>

    <string name="pirate">PIRATE MODE!</string>
    <string name="pirate_description">BE A TRUE MATEY, YA LANDLUBBER</string>

    <string name="color">Color Scheme</string>
    <string name="color_description">Choose application colors</string>
    <string-array name="color_titles">
        <item>White and Blue</item>
    </string-array>
    <string-array name="color_values">
        <item>default</item>
    </string-array>

    <string name="userTutorial">Begin User Tutorial</string>
    <string name="userTutorial_description">Opens up a new screen on how to use this app</string>

    <string name="socialLink">Social Media Link</string>
    <string name="socialLink_description">Opens up a new screen to link social media and Message In A Bottle accounts</string>

    <string name="logout">Log Out</string>
    <string name="logout_button"></string>
    <string name="logout_description">Log out of this device</string>
    <!-- Example General settings -->


    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="gps_network_not_enabled">Warning: GPS Not Enabled! We need your location to continue.</string>
    <string name="Cancel">ARRR! NO MAPS FOR YE!</string>
    <string name="open_location_settings">Yo-ho! A pirate\'s life for me!</string>

    <string-array name="types_of_bottles">
        <item>Create a Bottle</item>
        <item>Create a Pirate Mast</item>
    </string-array>
</resources>
