<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Warn on Discard
    -->
    <SwitchPreference
        android:key="discardWarning_switch"
        android:title="@string/discardWarning"
        android:summary="@string/discardWarning_description"
        android:defaultValue="true"/>

    <!-- Frequency of Bottle Pickup
    -->
    <ListPreference
        android:key="pickupFreq_list"
        android:title="@string/pickupFreq"
        android:summary="@string/pickupFreq_description"
        android:entries="@array/pickupFreq_titles"
        android:entryValues="@array/pickupFreq_values"
        android:defaultValue="60"/>

    <!-- Enable Maps
            True: Can see Google Maps
            False: Cannot see Google Maps
    -->
    <SwitchPreference
        android:key="map_switch"
        android:title="@string/maps"
        android:summary="@string/maps_description"
        android:defaultValue="false"/>

    <!-- Adult Language filter
            True: Adult Language Allowed
            False: Adult Language Blocked
    -->
    <SwitchPreference
        android:key="sailor_switch"
        android:title="@string/sailor_mouth"
        android:summary="@string/sailor_mouth_description"
        android:defaultValue="false" />

    <!-- Other Filters Menu
            Links to another menu that allows the user to type in filter entries.
    -->

</PreferenceScreen>